Thu Oct 14 19:07:05 2021  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: improve slightly again efficiency, and make
	  rotation by holding down a key work better.

Thu Oct 14 17:04:17 2021  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: surface plots got recomputed twice, so only compute
	  once and setup in the same way as when plotting data, except
	  recomputing the data on zoom.

Thu Oct 14 01:12:53 2021  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: Fix unsetting the stop button on script end,
	  fix current program marking.

	* src/graphing.c: Fix a couple of possible crashes when resetting
	  variable names.

Thu Oct 14 00:00:18 2021  Jiri (George) Lebl <jirka@5z.com>

	* graphing.c: improve slightly the frozenness of 3d plots, and enable
	  the stop button on the graph window the whole time a script is running.

	* examples/zoom-differentiability.gel: Example of zooming into a
	  differentiable and a nondifferentiable function of two variables

Wed Oct 13 17:41:48 2021  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: allow setting editor color scheme in the
	  gui settings

Wed Oct 13 09:38:06 2021  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: Make icons optional (ifdef'ed out), it actually
	  seems to me to look better without.

Wed Oct 13 00:39:40 2021  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.[ch]. src/graphing.[ch]: Remove use of amtk and
	  actually simplify the code in the process.  Also fix an inadvertant
	  API break for plugins (though there are no extant plugins as
	  far as I know).  Add Save toolbar item, fix window delete to act
	  like the quit button

	* configure.ac: remove amtk, raise version

Thu Feb 18 17:20:08 2021  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.26

Thu Feb 18 17:20:08 2021  Jiri (George) Lebl <jirka@5z.com>

	* help/update-po.sh,help/update-xml-to-txt-html.sh: port from
	  xml2po to itstool, and run the updates
