@@ -1,3 +1,11 @@
+Thu Oct 14 23:08:30 2021  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: fix off by one in the computing of the graphing
+	  subintervals for surface plots
+	
+	* examples/zoom-differentiability.gel: wait for a moment at the
+	  start, and a slightly different nondifferentiable function
+
 Thu Oct 14 19:07:05 2021  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: improve slightly again efficiency, and make
